--- a/game.html
+++ b/game.html
@@ -11,24 +11,46 @@
 <body>
     <div class="container">
         <div id="game" class="justify-center flex-column">
-            <h2 id="question">Question Question Question</h2>
+            <div id="hud">
+                <div id="hud-item">
+                    <p id="progressText" class="hud-prefix">
+                        Question
+                    </p>
+                    <div id="progressBar">
+                        <div id="progressBarFull">
+
+                        </div>
+                    </div>
+                </div>
+                <div id="hud-item">
+                    <p class="hud-prefix">
+                        Score
+                    </p>
+                    <h1 class="hud-main-text" id="score">
+                        0
+                    </h1>
+                </div>
+                
+            </div>
+            <h2 id="question">Răspunde corect</h2>
             <div class="choice-container">
                 <p class="choice-prefix">A</p>
-                <p class="choice-text">Blabla1</p>
+                <p class="choice-text" data-number="1">Răspunsul 1</p>
             </div>
             <div class="choice-container">
                 <p class="choice-prefix">B</p>
-                <p class="choice-text">Blabla2</p>
+                <p class="choice-text" data-number="2">Răspunsul 2</p>
             </div>
             <div class="choice-container">
                 <p class="choice-prefix">C</p>
-                <p class="choice-text">Blabla3</p>
+                <p class="choice-text" data-number="3">Răspunsul 3</p>
             </div>
             <div class="choice-container">
                 <p class="choice-prefix">D</p>
-                <p class="choice-text">Blabla4</p>
+                <p class="choice-text" data-number="4">Răspunsul 4</p>
             </div>
         </div>
     </div>
+    <script src="game.js"></script>
 </body>
 </html>
