--- a/game.html
+++ b/game.html
@@ -10,7 +10,8 @@
 </head>
 <body>
     <div class="container">
-        <div id="game" class="justify-center flex-column">
+        <div id="loader"></div>
+        <div id="game" class="justify-center flex-column hidden">
             <div id="hud">
                 <div id="hud-item">
                     <p id="progressText" class="hud-prefix">
@@ -32,22 +33,22 @@
                 </div>
                 
             </div>
-            <h2 id="question">Răspunde corect</h2>
+            <h2 id="question"></h2>
             <div class="choice-container">
                 <p class="choice-prefix">A</p>
-                <p class="choice-text" data-number="1">Răspunsul 1</p>
+                <p class="choice-text" data-number="1"></p>
             </div>
             <div class="choice-container">
                 <p class="choice-prefix">B</p>
-                <p class="choice-text" data-number="2">Răspunsul 2</p>
+                <p class="choice-text" data-number="2"></p>
             </div>
             <div class="choice-container">
                 <p class="choice-prefix">C</p>
-                <p class="choice-text" data-number="3">Răspunsul 3</p>
+                <p class="choice-text" data-number="3"></p>
             </div>
             <div class="choice-container">
                 <p class="choice-prefix">D</p>
-                <p class="choice-text" data-number="4">Răspunsul 4</p>
+                <p class="choice-text" data-number="4"></p>
             </div>
         </div>
     </div>
