changed language of the text

--- a/end.html
+++ b/end.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Congrats!</title>
+    <title>Scorul</title>
     <link rel="stylesheet" href="app.css">
 </head>
 <body>
@@ -16,17 +16,17 @@
                 type="text"
                 name="username"
                 id="username"
-                placeholder="username" />
+                placeholder="nume" />
                 <button 
                 type="submit"
                 class="btn"
                 id="saveScoreBtn"
                 onclick="saveHighScore(event)"
                 disabled
-                >Save</button>
+                >Salvează Scorul</button>
             </form>
-            <a href="/game.html" class="btn">Play Again</a>
-            <a href="/index.html" class="btn">Home</a>
+            <a href="/game.html" class="btn">Alt Chestionar</a>
+            <a href="/index.html" class="btn">Acasă</a>
         </div>
     </div>
     <script src="end.js"></script>
