--- a/game.html
+++ b/game.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Quiz - Play</title>
+    <title>Chestionar - Start</title>
     <link rel="stylesheet" href="app.css">
     <link rel="stylesheet" href="game.css">
 </head>
@@ -15,7 +15,7 @@
             <div id="hud">
                 <div id="hud-item">
                     <p id="progressText" class="hud-prefix">
-                        Question
+                        Întrebarea
                     </p>
                     <div id="progressBar">
                         <div id="progressBarFull">
@@ -25,7 +25,7 @@
                 </div>
                 <div id="hud-item">
                     <p class="hud-prefix">
-                        Score
+                        Scorul
                     </p>
                     <h1 class="hud-main-text" id="score">
                         0
