--- a/highscores.html
+++ b/highscores.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Highscores</title>
+    <title>Scoruri</title>
     <link rel="stylesheet" href="app.css">
     <link rel="stylesheet" href="highscores.css">
 </head>
 <body>
     <div class="container">
         <div id="highScores" class="flex-center flex-column">
-            <h1 id="finalScore">High Scores</h1>
+            <h1 id="finalScore">Scoruri</h1>
             <ul id="highScoresList"></ul>
-            <a href="/index.html" class="btn">Home</a>
+            <a href="/index.html" class="btn">Acasă</a>
         </div>
     </div>
 </body>
