--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 <body>
     <div class="container">
         <div id="home" class="flex-center flex-column">
-            <h1>Quiz</h1>
-            <a class="btn" href="/game.html">Play</a>
-            <a class="btn" href="/highscores.html">High Scores</a>
+            <h1>Devino Polițist</h1>
+            <a class="btn" href="/game.html">Începe</a>
+            <a class="btn" href="/highscores.html">Scoruri</a>
         </div>
     </div>
 </body>
